Added kill() to freezerTimedOut() in cgroups.cpp. This is a short-term fix for MESOS-1758.

Review: https://reviews.apache.org/r/25457